<resources>
    <string name="app_name">Folk</string>

    <!-- Contents -->
    <string name="title">Far far away</string>
    <string name="subtitle">She packed her seven versalia, put her initial into the belt and made herself on the way.</string>
    <string name="content">Far far away, behind the word mountains, far from the countries Vokalia and
        Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
        coast of the Semantics, a large language ocean. A small river named Duden flows by their place
        and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted
        parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the
        blind texts it is an almost unorthographic life One day however a small line of blind text by
        the name of Lorem Ipsum decided to leave for the far World of Grammar. </string>
    <string name="caption">It is a paradisematic country, in which roasted
        parts of sentences fly into your mouth.</string>

    <!-- Sections Hierarch-->
    <string name="section">Section</string>


    <!-- System Options Menu -->
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="media">Media</string>
    <string name="search">Search</string>

    <!-- Stories Section Default -->
    <string name="story_title">Duden flows</string>
    <string name="story_description">Even the all-powerful Pointing has no control about the
        blind texts it is an almost unorthographic life One day however a small line of blind text by
        the name of Lorem Ipsum decided to leave for the far World of Grammar.</string>

    <!-- Actions -->
    <string name="more">More</string>


    <!-- Main Sections -->
    <string name="section_title">Category Section</string>
    <string name="section_description">A light description of this section available for the users. Check out now this stories!</string>

</resources>
