<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:folk.jettech.com.folk="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="folk.jettech.com.folk.MainActivity">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        android:orderInCategory="10"
        folk.jettech.com.folk:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        folk.jettech.com.folk:showAsAction="never" />

    <item
        android:id="@+id/media"
        android:title="@string/media"
        folk.jettech.com.folk:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:title="@string/search"
        folk.jettech.com.folk:showAsAction="never" />
</menu>