<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="@dimen/activity_horizontal_margin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/title"
            app:titleEnabled="true">

            <ImageView
                android:src="@drawable/material_flat"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/gradient_overlay"
                android:foregroundGravity="fill"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:minHeight="100dp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/scroll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_text_layout_padding"
                    android:layout_marginTop="@dimen/default_text_layout_padding"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="@dimen/default_title_font_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_text_layout_padding"
                    android:layout_marginTop="@dimen/default_text_layout_padding"
                    android:text="@string/subtitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textSize="@dimen/default_subtitle_font_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_text_layout_padding"
                    android:layout_marginTop="@dimen/default_text_layout_padding"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/default_body_font_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_text_layout_padding"
                    android:layout_marginTop="@dimen/default_text_layout_padding"
                    android:text="@string/caption"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textSize="@dimen/default_caption_font_size" />


            </LinearLayout>


        </ScrollView>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_comment_black_24dp"
        android:tint="@android:color/white"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>